# openmp

./: .gitignore  CMakeLists.txt  book_contents.txt  linked_list.hpp  main.cpp  tests.cpp  tests.hpp  threads.hpp
src/: build_all.py  main.cpp  tests.hpp  threads.hpp
src/_affinity/: affinity.txt  omp_binding.c  omp_binding_forex.c  omp_mxv_1d.c  res
src/_cholesky/: 10.csv  100.csv  5.csv  build_all.sh  corrent_5_csv.txt  create_symmetric_matrix.py  matrix.cpp  matrix.hpp  run.cpp  run1.cpp  run_test.py  tools.hpp
src/_cholesky/builds/: sequential
src/_cholesky/sequential/: CMakeLists.txt  factorization.cpp  factorization.hpp
src/_dft/: build_all.sh  run.cpp
src/_dft/builds/: serial
src/_dft/c1/: dft.cpp
src/_dft/c1_1/: dft.cpp
src/_dft/c1_2/: dft.cpp
src/_dft/c1_3/: dft.cpp
src/_dft/c2/: dft.cpp
src/_dft/c2_2/: dft.cpp  dft.hpp
src/_dft/c3/: dft.cpp
src/_dft/c3_1/: dft.cpp
src/_dft/c3_2/: dft.cpp
src/_dft/c4/: dft.cpp
src/_dft/c4_1/: dft.cpp  dft.hpp
src/_dft/serial/: dft.cpp
src/_dot_prod_v01/: build_all.sh  run.cpp
src/_dot_prod_v01/builds/: serial_O0
src/_dot_prod_v01/c1/: dprod.cpp
src/_dot_prod_v01/serial/: dprod.cpp
src/_dot_product/: build_all.sh  run.cpp
src/_dot_product/builds/: c1  c1_1  c1_1_O2  c1_2  c1_2_O2  c1_O2  c2_1_O2_simd  c2_1_simd  c2_2_O2  c2_2_simd  c2_O2  c2_simd  c3  c3_10  c3_10_O2  c3_11  c3_11_1_O2  c3_11_1_simd  c3_11_O2_simd  c3_15_O2_simd  c3_15_simd  c3_1_O2  c3_2  c3_2_O2  c3_2_O2_simd  c3_2_simd  c3_3  c3_3_O2_simd  c3_4  c3_4_O2_simd  c3_5  c3_5_O2  c3_6  c3_67O2  c3_6_O2  c3_7  c3_7_1  c3_7_1_O2  c3_7_2  c3_7_2_O2  (+14 more)
src/_dot_product/c1/: dprod.cpp  dprod.hpp
src/_dot_product/c1_1/: dprod.cpp
src/_dot_product/c1_2/: dprod.cpp
src/_dot_product/c2/: dprod.cpp
src/_dot_product/c2_1/: dprod.cpp
src/_dot_product/c2_2/: dprod.cpp
src/_dot_product/c2_3/: dprod.cpp
src/_fft/: README.md  original.cpp  rosetta.cpp  run1.cpp  run_variations.json
src/_integration/: run.cpp
src/_kmeans_clustering/: build_all.sh  original  output_reference  run.cpp  run1.cpp
src/_linked_list_traversal/: build_all  build_all.sh  fibonacci.cpp  fibonacci.hpp  l_list.hpp  run.cpp  run_builds.sh  run_variations.json
src/_linked_list_traversal/c3/: CMakeLists.txt  calculate.cpp  setup
src/_mandelbrot/: run.cpp
src/_matrix_multiplication/: build_all.sh  run.cpp  run_variations.json  spao_ta_rologia  tools.cpp
src/_matrix_multiplication/tasks/matmul/: CMakeLists.txt  matmul.hpp
src/_mergesort/: build_all.sh  common.cpp  common.hpp  run.cpp
src/_pi_calculation/: <F1><F1>:w  README.md  build_all.sh  run.cpp
src/_pi_calculation/c4/integrate/: CMakeLists.txt
src/_prime_numbers/: build_all.sh  run.cpp  run_test.py
src/_prime_numbers/sequential/: CMakeLists.txt  prime.cpp  prime.hpp
src/_prod_cons_v01/: build_all.sh  run.cpp  tools.cpp  tools.hpp
src/_quicksort/: build_all.sh  run.cpp  run_task.cpp
src/_saxpy/: build_all.sh  run.cpp  run_builds.sh  run_device_alloc.cpp  run_padding_struct.cpp
src/accumulation/: create_graph.py  result.json  run_test.py  run_variations.json
src/argparser/: CMakeLists.txt  argparser.cpp  argparser.hpp
src/auxiliaries/: auxiliaries.cpp  auxiliaries.hpp  py_aux.py
src/cholesky/: create_graph.py  run_variations.json  tools.cpp
src/dot_prod/: tools.cpp  tools.hpp
src/double_array_elems/: tools.hpp
src/fft/: create_graph.py  run_test.py
src/fibonacci/: README.md  create_graph.py  run_test.py  run_variations.json  setup.py
src/fibonacci/c1/: CMakeLists.txt  run.cpp
src/fibonacci/c1/fib/: fib.hpp
src/fibonacci/c2/: CMakeLists.txt  README.md  run.cpp
src/fibonacci/c2/fib/: fib.cpp
src/fibonacci/sequential/fib/: CMakeLists.txt  fib.cpp
src/heat_plate/: README.md  create_graph.py  run_test.py  run_variations.json
src/jacobi/: create_graph.py  run_test.py  run_variations.json
src/jacobi/c1/: CMakeLists.txt  run.cpp
src/jacobi/sequential/: CMakeLists.txt  gnuplot_i.cpp  gnuplot_i.h  gnuplot_i.hpp  jacobi.cpp  jacobi.h  main.cpp  run.cpp
src/linked_list_traversal/: README.md  create_graph.py  result.json  run_test.py
src/mandelbrot/: README.md  create_graph.py  result_orig.json  run_test.py  run_variations.json
src/mat_mul_v01/: README.md  tools.cpp
src/matrix_multiplication/: create_graph.py  run_test.py  run_variations.json  tools.cpp  tools.hpp
src/matrix_multiplication/c1/: CMakeLists.txt  exec  run.cpp
src/matrix_multiplication/c1/matmul/: matmul.cpp  matmul.hpp
src/matrix_multiplication/ccc4/: CMakeLists.txt  README.md  exec  run.cpp
src/matrix_multiplication/ccc4/matmul/: matmul.cpp
src/mergesort/: README.md  create_graph.py  run_test.py  run_variations.json
src/mergesort/c2/: CMakeLists.txt  run.cpp
src/molecular_dynamics/: README.md  create_graph.py  run_test.py  run_variations.json  tools.cpp  tools.hpp
src/pi_calculation/: README.md  c1.json  c2.json  c3.json  c4.json  c5.json  c6.json  cases.json  create_graph.py  result.json  result_c1.json  result_c2.json  result_c3.json  result_c4.json  result_c5.json  result_c6.json  result_sequential.json  run_test.py  run_variations.json  sequential.json
src/pi_calculation/c1/: CMakeLists.txt  README.md  exec  run.cpp
src/pi_calculation/c1/integrate/: integ.cpp
src/pi_calculation/c5/: CMakeLists.txt  README.md  run.cpp
src/pi_calculation/c5/integrate/: integ.cpp  integ.hpp
src/prime_numbers/: README.md  create_graph.py  readme.md  run_variations.json
src/prime_numbers/c1/: CMakeLists.txt  README.md  run.cpp
src/prime_numbers/c1/prime/: prime.cpp
src/saxpy/: build_all.sh  c1_1.exe.stackdump  readme  run.cpp  run_device_alloc.cpp
src/simd/sequential/: CMakeLists.txt  core  run.cpp
src/sudoku/sequential/: CMakeLists.txt  aux.cpp  aux.hpp  run.cpp
src/vector_add/: README.md  run_variations.json  tools.cpp  tools.hpp
src/vector_add_doubles/: create_graph.py  run_test.py  run_variations.json  saxpy.cpp  tools.cpp  tools.hpp
src/vector_add_doubles/c2/: CMakeLists.txt  run.cpp
src/vector_add_doubles/c2/addarr/: addarr.cpp
src/vectorization/: README.md
(+589 files in other folders)
